--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <h2>Welcome to <%= title %></h2>
+    <a href="/uploadPage">Click here to go to upload page</a>
   </body>
 </html>
