multiple file uploads enabled

--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form method="POST" action="/submit-form" enctype="multipart/form-data">
-        <input type="file" name="document" />
+        <input type="file" name="document" multiple/>
         <input type="submit" />
     </form>
 </body>
