--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="POST" action="/submit-form" enctype="multipart/form-data">
+    <form method="POST" action="/uploadPage" enctype="multipart/form-data">
         <input type="file" name="document" />
         <input type="submit" />
     </form>
