--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,52 @@
-body {
+*{
+  /* margin:0; */
+  padding:0;
+}
+.image{
+  background-image: url(bg.png);
+  background-size: cover;
+  background-position: center;
+  height:750px;
+  position:fixed;
+  left:0;
+  right:0;
+  top:0;
+  z-index: -1;
+  opacity: 0.5;
+}
+.navbar{
+  /* background-color: black; */
+  padding: 3px 4px;
+}
+.navbar ul{
+  /* margin-top:25px; */
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.navbar li{
+  list-style-type: none;
+}
+.navbar li a{
+  text-decoration: none;
+  color:white;
+  padding: 5px 50px;
+  margin:5px;
+  border: 1px solid white;
+}
+.t{
+  text-align: center;
+}
+.upload{
+  width:50%;
+  margin:auto;
+  border: 2px solid black;
+}
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
-}
+} */
