--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,24 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <h2>Welcome to <%= title %></h2>
-    <a href="/uploadPage">Click here to go to upload page</a>
+  <div class="image"></div>
+  <nav class="navbar">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Profile</a></li>
+    <li><a href="#">Logout</a></li>
+  </ul>
+  </nav>
+  <div class="t">
+  <h2>Welcome to the Purchase Order filing application</h2>
+  <h3>Follow these steps to upload your Purchase Order</h3>
+  <ul>
+    <li>Step 1:Login using your IITRpr ID by clicking <a href="/auth/google">here</a></li>
+    <li>Step 2:Click on the link below to go to the uploading page</li>
+  </ul>
+  <h3><a href="/uploadPage">Click here to go to upload page</a></h3></div>
+
+  </div>
+
   </body>
 </html>
