--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form method="POST" action="/uploadPage" enctype="multipart/form-data">
-        <input type="file" name="document" />
-        <input type="submit" />
-    </form>
-</body>
+<html>
+  <head>
+    <title><%= title %></title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
+  <div class="image"></div>
+  <nav class="navbar">
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Profile</a></li>
+    <li><a href="#">Logout</a></li>
+  </ul>
+  </nav>
+  <div class="t">
+  <h2>Welcome to the Purchase Order filing application</h2>
+  </div>
+  <div class="upload">
+  <form method="POST" action="/uploadPage" enctype="multipart/form-data">
+    <input type="file" name="document" />
+    <br>
+    <input type="submit" />
+  </form>
+  </div>
+  </body>
 </html>
