--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
   <h2>Welcome to the Purchase Order filing application</h2>
   <h3>Follow these steps to upload your Purchase Order</h3>
   <ul>
-    <li>Step 1:Login using your IITRpr ID by clicking <a href="/auth/google">here</a></li>
-    <li>Step 2:Click on the link below to go to the uploading page</li>
+    <li><big><b>Step 1:Login using your IITRpr ID by clicking <a href="/auth/google">here</a></b></big></li>
+    <li><big><b>Step 2:Click on the link below to go to the uploading page</b></big></li>
   </ul>
   <h3><a href="/uploadPage">Click here to go to upload page</a></h3></div>
 
