Handle Login Redirects

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
   <div class="image"></div>
   <nav class="navbar">
   <ul>
-    <li><a href="#">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="#">Profile</a></li>
-    <li><a href="#">Logout</a></li>
+    <li><a href="/auth/logout">Logout</a></li>
   </ul>
   </nav>
   <div class="t">
