--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,75 @@
   width:50%;
   margin:auto;
   border: 2px solid black;
+  padding: 20px;
 }
+
+.fileUpload{
+  padding:5px;
+}
+
+.submit-btn{
+  padding:5px;
+  margin:5px;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  font-weight: 400;
+  font-size: 1 rem;
+  margin-left:355px;
+  margin-top:20px;
+}
+.drop-zone {
+  max-width: 200px;
+  height: 200px;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  color:black;
+  border: 4px dashed #009578;
+  border-radius: 10px;
+  margin:auto;
+}
+
+.drop-zone--over {
+  border-style: solid;
+}
+
+.drop-zone__input {
+  display: none;
+}
+
+.drop-zone__thumb {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #cccccc;
+  background-size: cover;
+  position: relative;
+}
+
+.drop-zone__thumb::after {
+  content: attr(data-label);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0;
+  color: #ffffff;
+  background: rgba(0, 0, 0, 0.75);
+  font-size: 14px;
+  text-align: center;
+}
+
 /* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
