--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,32 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <%- include('./common/head') %>
+    <link rel="stylesheet" href="stylesheets/index.css">
   </head>
+
   <body>
-  <div class="image"></div>
-  <nav class="navbar">
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="/auth/logout">Logout</a></li>
-  </ul>
-  </nav>
-  <div class="t">
-  <h2>Welcome to the Purchase Order filing application</h2>
-  <h3>Follow these steps to upload your Purchase Order</h3>
-  <ul>
-    <li><big><b>Step 1:Login using your IITRpr ID by clicking <a href="/auth/google">here</a></b></big></li>
-    <li><big><b>Step 2:Click on the link below to go to the uploading page</b></big></li>
-  </ul>
-  <h3><a href="/uploadPage">Click here to go to upload page</a></h3></div>
-  </div>
+
+    <header>
+      <%- include('./common/navbar') %>
+    </header>
+
+    <!-- Begin page content -->
+    <main role="main" class="container">
+      <h1 class="mt-5">Welcome to the purchase order filling form.</h1>
+      <p class="lead">This Portal can only be used using the IIT Ropar Email Account.</p>
+
+      <div class="row">
+        <div class="col-6">
+          <a href="/uploadPage" class="btn btn-secondary btn-lg">Upload a new PO</a>
+        </div>
+        <div class="col-6">
+          <a href="#" class="btn btn-secondary btn-lg">View Previously Uploaded PO</a>
+        </div>
+      </div>
+    </main>
+
+    <%- include('./common/footer') %>
+    
   </body>
 </html>
