--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -1,35 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <%- include('./common/head') %>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="shortcut icon" href="/assets/favicon.ico">
   </head>
   <body>
-  <div class="image"></div>
-  <nav class="navbar">
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Profile</a></li>
-    <li><a href="#">Logout</a></li>
-  </ul>
-  </nav>
-  <div class="t">
-  <h2>Welcome to the Purchase Order filing application</h2>
-  </div>
-  </head>
-
-  <body>
-  <div class="upload">
-    <form method="POST" action="/uploadPage" enctype="multipart/form-data">
-      <div class="drop-zone">
-        <span class="drop-zone__prompt">Drop file here or click to upload</span>
-        <input type="file" name="myFile" class="drop-zone__input">
-      </div>    
-      <br>
-      <input type="submit" class="submit-btn"/>
-    </form>
-  </div> 
-  <script src="/javascripts/upload.js"></script>
+    <header>
+      <%- include('./common/navbar') %>
+    </header>
+    <main role='main' class='container'>
+      
+        <div class="upload border border-dark mt-4 p-4 mx-auto w-50 ">
+          <form method="POST" action="/uploadPage" enctype="multipart/form-data" class='text-center'>
+            <div class="drop-zone">
+              <span class="drop-zone__prompt">Drop file here or click to upload</span>
+              <input type="file" name="myFile" class="drop-zone__input">
+            </div>    
+            <br>
+            <input type="submit" class="btn btn-outline-primary mx-auto " value="Submit">
+          </form>
+        </div> 
+      
+    </main>
+    <%- include('./common/footer')  %>
+    <script src="/javascripts/upload.js"></script>
   </body>
 </html>
