Make a field required

--- a/views/uploadPage.ejs
+++ b/views/uploadPage.ejs
@@ -14,7 +14,7 @@
           <form method="POST" action="/uploadPage" enctype="multipart/form-data" class='text-center'>
             <div class="drop-zone">
               <span class="drop-zone__prompt">Drop file here or click to upload</span>
-              <input type="file" name="myFile" class="drop-zone__input">
+              <input type="file" name="myFile" class="drop-zone__input" required>
             </div>    
             <br>
             <input type="submit" class="btn btn-outline-primary mx-auto " value="Submit">
