--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -10,3 +10,4 @@
   <script>window.jQuery || document.write('<script src="javascripts/jquery-slim.min.js"><\/script>')</script>
   <script src="javascripts/popper.min.js"></script>
   <script src="javascripts/bootstrap.min.js"></script>
+  <script src="javascripts/holder.min.js"></script>
