feeding form data into sheet

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,7 @@ body > .container {
   font-size: 20px;
   cursor: pointer;
   color:black;
-  border: 4px dashed #009578;
+  border: 8px dashed grey;
   border-radius: 10px;
   margin:auto;
 }
