--- a/views/confirmationPage.ejs
+++ b/views/confirmationPage.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <%- include('./common/head') %>
-    <link rel="stylesheet" href="stylesheets/index.js">
+    <!-- <link rel="stylesheet" href="stylesheets/index.js"> -->
     <link rel="stylesheet" href="stylesheets/form-validation.css">
   </head>
 
@@ -192,7 +192,8 @@
                     <input type="text" class="form-control" id="remarks" placeholder="" name="remarks" >
                 </div>
                 <hr class="mb-4">
-                <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+                <!-- <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button> -->
+                <input type="submit" class="btn btn-primary btn-lg btn-block">
             </form>
             </div>
         </div>
@@ -222,6 +223,5 @@
           }, false);
         })();
       </script>
-    
   </body>
 </html>
