--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -5,7 +5,70 @@
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
+/* Show one image on devices under 540px */
+@media screen and (max-width: 540px) { 
+    #dock-container li img {
+     width: 20%;
+    }
+    
+    #dock-container {
+        bottom: 15%;
+        width: 100%;
+    }
+    
+    #dock-container li:hover img { 
+        -webkit-transform: scale(1.1);
+        margin: 0 .5em;
+    }
+    
+    #dock-container li:hover + li img,
+    #dock-container li.prev img {
+        /* -webkit-transform: scale(1); */
+        margin: 0 .5em;
+    }
+ }
 
+ @media screen and (min-width: 540px) and (max-width: 1000px) {
+    #dock-container li img {
+     width: 33.333%;
+    }
+    #dock-container {
+        bottom: 20%;
+        right: 10%;
+        left: 10%;
+        width: 80%;
+    }
+    #dock-container li:hover img { 
+        -webkit-transform: scale(1.2);
+        margin: 0 .2em;
+    }
+    #dock-container li:hover + li img,
+    #dock-container li.prev img {
+        /* -webkit-transform: scale(1); */
+        margin: 0 0em;
+    }
+ }
+
+ @media screen and (min-width: 1000px) {
+    #dock-container li img {
+     width: 50%;
+    }
+    #dock-container {
+        bottom: 40%;
+        right: 20%;
+        left: 20%;
+        width: 60%;
+    }
+    #dock-container li:hover img { 
+        -webkit-transform: scale(1.4);
+        margin: 0 2em;
+    }
+    #dock-container li:hover + li img,
+    #dock-container li.prev img {
+        /* -webkit-transform: scale(1); */
+        margin: 0 1.5em;
+    }
+ }
 body > .container {
     padding: 60px 15px 0;
 }
@@ -18,3 +81,42 @@ body > .container {
 code {
     font-size: 80%;
 }
+
+#dock-container {
+    position: fixed;
+    /* bottom: 40%; */
+    text-align: center;
+    background: rgba(255,255,255,0.2);
+    border-radius: 10px 10px 0 0;
+  }
+  #dock-container li {
+    list-style-type: none;
+    display: inline-block;
+    position: relative;
+  }
+  #dock-container li img {
+    position:relative;
+    height: auto;
+    /* width: 50%; */
+    /* -webkit-box-reflect: below 2px */
+              -webkit-gradient: (linear, left top, left bottom, from(transparent),
+              color-stop(0.7, transparent), to(rgba(255,255,255,.5)));
+    -webkit-transition: all 0.3s;
+    -webkit-transform-origin: 50% 100%;
+  }
+  #dock-container li span {
+    /* display: none; */
+    position: absolute;
+    bottom: 0%;
+    left: 0;
+    width: 100%;
+    background-color: rgba(129, 122, 122, 0.75);
+    margin-bottom: -25px;
+    border-radius: 3px;
+  }
+  #dock-container li:hover span {
+    display: block;
+    color: #fff;
+    background-color: rgba(73, 70, 70, 0.75);
+  }
+  
