--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,14 +16,28 @@
       <h1 class="mt-5">Welcome to the purchase order filling form.</h1>
       <p class="lead">This Portal can only be used using the IIT Ropar Email Account.</p>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-6">
           <a href="/uploadPage" class="btn btn-secondary btn-lg">Upload a new PO</a>
         </div>
         <div class="col-6">
           <a href="#" class="btn btn-secondary btn-lg">View Previously Uploaded PO</a>
         </div>
-      </div>
+      </div> -->
+    <div id="dock-container">
+      <div id="dock">
+        <ul>
+           <li>
+             <span>Upload a new PO</span>
+             <a href="/uploadPage"><img src="images/du1.png"/></a>
+           </li>
+           <li>
+             <span>View Previously Uploaded PO</span>
+             <a href="#"><img src="images/dv.png"/></a>
+           </li>
+        </ul>
+      </div> 
+     </div>
     </main>
 
     <%- include('./common/footer') %>
