Change Confirmation Page

--- a/public/stylesheets/form-validation.css
+++ b/public/stylesheets/form-validation.css
@@ -9,3 +9,9 @@
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 
 .lh-condensed { line-height: 1.25; }
+
+form label.required:after
+{
+    color: red;
+    content: " *";
+}
